# swihs

./: CHANGELOG.md  README.md  swihs.cabal
.github/workflows/: haskell.yml
src/: Swihs.hs
src/Swihs/: Builder.hs  C.hs  Query.hs  Term.hs  Types.hs
src/Swihs/C/: Embed.hs  Query.hs  Terms.hs  Text.hs  Types.hs
src/Swihs/Lib/: Builtin.hs  Clpfd.hs
tests/: Tests.hs
tests/Swihs/Tests/: Builtin.hs  Clpfd.hs
